# spa2013-topk

./: .gitignore  README.md
accurate-topk/: README.md  accurate-topk.cabal
accurate-topk/src/: Main.hs
my-topk/: README.md  my-topk.cabal
my-topk/src/: Main.hs
play-data/: README.md  play-data.cabal
play-data/samples/count-histogram/: ips.txt  searched_words.txt
play-data/samples/histogram/: places.txt
play-data/samples/prepared/: one-million-searched-words.txt  tiny-places.txt
play-data/src/: Main.hs  PlayData.hs
play-data/src/PlayData/: Distribution.hs  Element.hs
play-data/src/PlayData/Distribution/: CountHistogram.hs  Histogram.hs
